# audio-automation

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: daw_workflow.rs  minimal.rs  plot_to_png.rs  visualize_curves.rs
src/: clip.rs  curve.rs  envelope.rs  lib.rs  parameter.rs  state.rs
